Fixed alignment issue with dropdown on navbar where it went out of the page

--- a/static/CSS/master.css
+++ b/static/CSS/master.css
@@ -36,28 +36,35 @@ html, body{
   }
 
   #dropdown {
+  width:50px;
   float:right;
   position: relative;
   display: inline-block;
+  overflow:visible;
+  }
+
+  #dropdown-content:first-child {
+    margin-top:10px;
   }
 
   #dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0#2);
+  right:0;
   }
 
   #dropdown-content a {
   color: black;
-  padding: 12px 16px;
+  padding:10px;
+  padding-left:30px;
   text-decoration: none;
   display: block;
   }
 
   #dropdown-content a:hover {
-  background-color: #f1f1f1
+  background-color: #f2f2f2
   }
 
   #dropdown:hover #dropdown-content {
